Upgrade Spring Boot and JDK 25 toolchain